--- a/style/style.css
+++ b/style/style.css
@@ -56,6 +56,9 @@ li {
 
 button.item {
     background: none;
+    border-style: none;
+    color: rgb(210, 192, 164);
+    font-size: 15px;
 }
 
 #videoList {
