--- a/style/style.css
+++ b/style/style.css
@@ -51,14 +51,26 @@ li {
 }
 
 button.item {
-    margin: 8px;
+    margin: auto 8px;
     background: transparent;
     transition: .3s;
     border-style: none;
     color: rgb(210, 192, 164);
-    font-size: 15px;
+    font-size: 18px;
     cursor: pointer;
+    border-radius: 10px;
+    height: 20px;
+    width: 20px;
 }
+
+img.item {
+    margin: 6px;
+}
+
+span.item {
+    margin: 4px;
+}
+
 
 button.item:hover {
     background: rgb(236, 226, 210);
